--- a/services/product/package.json
+++ b/services/product/package.json
@@ -1,9 +1,9 @@
 {
   "name": "product",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "product.serivce.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon node product.serivce.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "@grpc/grpc-js": "^1.13.2",
     "@grpc/proto-loader": "^0.7.13",
     "mongoose": "^8.13.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
